--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-redux": "^7.2.8"
+    "react-redux": "^7.2.8",
+    "react-responsive-carousel": "^3.2.23",
+    "spinners-react": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
