--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.8",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.0.5",
     "spinners-react": "^1.0.7"
   },
   "devDependencies": {
