--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
