--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.0.0",
     "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.8",
